[package]
name = "http_server"
edition = "2024"
authors.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
axum.workspace = true
log.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http = { workspace = true, features = ["trace", "cors"] } 
warpui.workspace = true
