[package]
name = "i18n"
edition = "2024"
authors.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
lazy_static.workspace = true
log.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
settings_value = { workspace = true, features = ["derive"] }
sys-locale = "0.3"
