[package]
name = "input_classifier"
authors = ["Warp Team <dev@warp.dev>"]
edition = "2024"
publish.workspace = true
license.workspace = true

[[bin]]
name = "evaluate"
path = "src/bin/evaluate.rs"

[features]
onnx_candle = [
    "onnx",
    "dep:candle-core",
    "dep:candle-nn",
    "dep:candle-onnx",
    "dep:prost",
]
onnx_ort = [
    "onnx",
    "dep:ort",
    "dep:ndarray",
    "dep:parking_lot",
]
fasttext = ["dep:fasttext", "dep:rust-embed", "dep:tempfile"]
onnx = ["dep:rust-embed", "dep:tokenizers"]

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
clap.workspace = true
futures.workspace = true
candle-core = { version = "0.9.2", optional = true }
candle-nn = { version = "0.9.2", optional = true }
candle-onnx = { version = "0.9.2", optional = true }
cfg-if.workspace = true
itertools.workspace = true
fasttext = { version = "0.7.8", optional = true }
futures-lite.workspace = true
instant.workspace = true
lazy_static.workspace = true
log.workspace = true
natural_language_detection.workspace = true
ndarray = { version = "0.16.1", optional = true }
ort = { version = "2.0.0-rc.10", optional = true }
parking_lot = { workspace = true, optional = true }
prost = { version = "0.14.3", optional = true }
rust-embed = { workspace = true, optional = true }
serde.workspace = true
smol_str.workspace = true
tempfile = { workspace = true, optional = true }
tokenizers = { version = "0.21.4", optional = true }
warp_completer.workspace = true

[dev-dependencies]
